# dio-desafio-api-fastapi-tdd

./: Makefile  README.md  pyproject.toml
store/: docker-compose.yml
store/core/: config.py
store/schemas/: base.py  product.py
tests/: conftest.py
tests/schemas/: factories.py  test_product.py
tests/usecases/: test_product.py
